test/fails/bad_parsing/missing_else.lgl
void main() {
    if (true) { skip; }
}    
